applauncherd (2.0.8) stable; urgency=low

  * Fixes: NB#288982 - COREWEB: booster '__assert_fail append_pending_request _XReply'

 -- Alexey Shilov <alexey.shilov@nokia.com>  Fri, 04 Nov 2011 17:06:18 +0200

applauncherd (2.0.7) stable; urgency=low

   * Fixes: NB#283676 - running processes are not granted new credentials until restarted

 -- Dmitry Rozenshtein <ext-dmitry.2.rozenshtein@nokia.com>  Wed, 02 Nov 2011 14:07:21 +0300

applauncherd (2.0.6) stable; urgency=low

  * Changes: test fixed test_launched_app_wm_class_m
  * Changes: updated invalid test cases in func-tests and removed 1 invalid test case in daemon-tests
  * Changes: QML test application updated to store QML in resource file
  * Fixes: NB#287488 - Boosted QML application startup time is above requirements
 
 -- Dmitry Rozenshtein <ext-dmitry.2.rozenshtein@nokia.com>  Wed, 02 Oct 2011 14:04:32 +0300

applauncherd (2.0.5) stable; urgency=low

  * Changes: Implementation of re-exec functionality, trigger is disabled
  * Fixes: NB#269265 - COREWEB: __assert_fail append_pending_request _XReply
  * Changes: added CPU usage logging to performance tests

 -- Marek Ruszczak <ext-Marek.Ruszczak@nokia.com>  Fri, 14 Oct 2011 12:44:44 +0300

applauncherd (2.0.4) stable; urgency=low

  * Fixes: NB#284949 - m & d app boosters are leaking FDs 
  * Changes: Insignificant returned false in qml perf tests

 -- Olli Leppanen <olli.leppanen@nokia.com>  Mon, 3 Oct 2011 11:18:27 +0300

applauncherd (2.0.3) stable; urgency=low

  * Fixes: NB#274400 - [TASK] Remove legacy code from applauncherd

 -- Marek Ruszczak <ext-marek.ruszczak@nokia.com>  Tue, 27 Sep 2011 15:48:27 +0300

applauncherd (2.0.2) stable; urgency=low

  * Fixes: NB#274400 - [TASK] Remove legacy code from applauncherd

 -- Marek Ruszczak <ext-marek.ruszczak@nokia.com>  Mon, 26 Sep 2011 13:59:20 +0300

applauncherd (2.0.1) stable; urgency=low

  * Changes: Fix performance tests
  * Changes: Fix dependency for testscripts